--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,10 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "sensio/generator-bundle": "^3.0",
-        "willdurand/hateoas-bundle": "dev-master",
-        "jms/serializer-bundle": "dev-master",
-        "friendsofsymfony/rest-bundle": "dev-master",
-        "pagerfanta/pagerfanta": "dev-master"
+        "willdurand/hateoas-bundle": "^1.1",
+        "jms/serializer-bundle": "^1.1",
+        "friendsofsymfony/rest-bundle": "^1.7",
+        "pagerfanta/pagerfanta": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "5.*"
